[metadata]
url = https://dapr.io/
author = Dapr Authors
author_email = daprweb@microsoft.com
license = Apache
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Documentation = https://github.com/dapr/docs
    Source = https://github.com/dapr/python-sdk

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Flask >= 1.1
    dapr-dev >= 1.13.0rc1.dev
